--- a/src/sass/shapes/_triangle.scss
+++ b/src/sass/shapes/_triangle.scss
@@ -43,6 +43,7 @@
       @include heightWidthColor_center;
       clip-path: polygon(0 100%, 100% 0, 100% 100%);
       right: 7.5%;
+      width: $triangle-center-col-width;
     }
     &_right {
       @include heightWidthColor_center;
@@ -59,7 +60,13 @@
     &_left {
       @include heightWidthColor_bottom;
       clip-path: polygon(0 0, 100% 0, 0 100%);
-      left: 7.5%;
+      left: 6.5%;
+    }
+
+    &_right {
+      @include heightWidthColor_bottom;
+      clip-path: polygon(0 0, 100% 0, 100% 100%);
+      right: 6.5%;
     }
   }
 }
